--- a/src/App.scss
+++ b/src/App.scss
@@ -97,7 +97,6 @@ header {
 .count {
   color: #fff;
   font-weight: bold;
-  font-size: 22px;
   text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.8);
 }
 
@@ -122,4 +121,8 @@ figure {
 
 .guesses {
   padding: 20px;
+}
+
+.select {
+  font-size: inherit;
 }
