--- a/src/App.scss
+++ b/src/App.scss
@@ -88,9 +88,14 @@ header {
 }
 
 .grid {
-  @include mediumAndLarge {
+  @include large {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
+  }
+
+  @include medium {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
   }
 }
 
